--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
     <p>type a number in the text box to get its area squared</p>
     <button onclick="textBox()">calculate</button><br>
     <script>
-      let squareLength,
-      let squareArea,
+      let squareLength;
+      let squareArea;
       function textBox() {
-      squareLength= document.getElementById("txtbox").value = " squareArea= squareLength*squareLength";
+      squareLength= document.getElementById("txtbox").value= 
+      squareArea= squareLength*squareLength;
+      .value= "The square area is "+squareArea"." ; 
       }
-      alert('the area of your square + squareArea');
     </script>
   </body>
 </html>
