--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
       let squareArea;
       function textBox() {
       squareLength= document.getElementById("txtbox").value= 
-      squareArea= squareLength*squareLength;
-      .value= "The square area is "+squareArea"." ; 
+      squareArea= 
+      squareLength*squareLength;
+      alert ("The square area is "+squareArea ); 
       }
     </script>
   </body>
